--- a/Groovy/RestaurantReservationSystem/grails-app/assets/stylesheets/registration.css
+++ b/Groovy/RestaurantReservationSystem/grails-app/assets/stylesheets/registration.css
@@ -1,4 +1,11 @@
 #registration-form {
+    position: relative;
     width: 500px;
     margin: 20% auto;
+}
+
+#registration-form a {
+    position: absolute;
+    top: -30px;
+    right: 0px;
 }
