--- a/Groovy/RestaurantReservationSystem/grails-app/assets/stylesheets/registration.css
+++ b/Groovy/RestaurantReservationSystem/grails-app/assets/stylesheets/registration.css
@@ -1,11 +1,11 @@
 #registration-form {
     position: relative;
     width: 500px;
-    margin: 20% auto;
+    margin: 10% auto;
 }
 
-#registration-form a {
-    position: absolute;
-    top: -30px;
-    right: 0px;
+#registration-form > .langs {
+    margin: 0 auto;
+    width: 90px;
+    padding: 0 10px;
 }
